# bazel-worknote

./: .gitignore  BUILD.bazel  WORKSPACE  WORKSPACE.bazel  phase_1.md  phase_2.md  phase_3.md  readme.md
modules/: BUILD.bazel  wcs.cpp  wcs.h  wcs_z.cpp
test/: BUILD  BUILD.bazel  test_1.cpp  test_2.cpp
